Fix dev fest logo causing some jumps while loading

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -211,7 +211,7 @@ body {
 }
 
 .reveal header img {
-  height: 120px;
+  width: 272px;
 }
 
 .reveal section.title {
